FIX | GUI - File name (word-wrap) message detail

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -2556,6 +2556,10 @@ tr:nth-child(odd) {
       flex-direction: row-reverse;
       padding-left: 8px;
     }
+
+    a{
+      word-wrap: break-word;
+    }
   }
 
   .half-row {
